Cambie el titulo de la hoja de vida

--- a/Hoja de vida.html
+++ b/Hoja de vida.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hoja de Vida</title>
+    <title>Hoja de vida: Kristin Motato</title>
     <tdnk rel="stylesheet" href="style.css">
 </head>
 <body>
