Cambié la palabra proceso por formación

--- a/Hoja de vida.html
+++ b/Hoja de vida.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1> Kristin Luillina <br> Motato Luna</h1>
-    <h3> Ingeniera Industrial en proceso</h3>
+    <h3> Ingeniera Industrial en formación.</h3>
     <h2> Perfil</h2>
     <p>Ingeniera Industrial, con enfasis en desarrollo FullStack en JavaSript, importantes habitddades de anatdsis y mejora de procesos y experiencia adquirida en gestión de proyectos y mejora de rendimiento de organizaciones. Con habitddades creativas e innovadoras para la generación de ideas y estrategias, así como capacidad de trabajar en equipo y crear relaciones y espacios de comunicación asertivamente. </p>
     <h2>Referencias</h2>
